--- a/src/main/resources/assets/customdurability/lang/en_us.json
+++ b/src/main/resources/assets/customdurability/lang/en_us.json
@@ -2,8 +2,19 @@
   "yacl.customdurability.title": "Custom Durability",
 
   "yacl.customdurability.armor_is_durability_multiplier.label": "Armor Multiplier",
-  "yacl.customdurability.armor_is_durability_multiplier.description": "Whether Armor Durabilities should be multiplied using the Default Vanilla Multipliers.\n\nDefault Multipliers:\n§7Helmet: §a11\n§7Chestplate: §a16\n§7Leggings: §a15\n§7Boots: §a13\n\n§fFor Example; The Durability of Boot Armors would be §c13 * Durability§f.",
+  "yacl.customdurability.armor_is_durability_multiplier.description": "Whether Armor Durabilities should be multiplied using the Default Vanilla Multipliers.\n\nDefault Multipliers:\n§7Helmet: §a11\n§7Chestplate: §a16\n§7Leggings: §a15\n§7Boots: §a13\n\n§fFor Example; The Durability of Boot Armor would be §c13 * Durability§f.",
 
   "yacl.customdurability.overrides.label": "Durability Overrides",
-  "yacl.customdurability.overrides.description": "Add Custom Durabilities for items!\n\n§cHas to be in the format of §8'§7key;durability§8'§c.\n\n§aAccepts Item Tags!"
+  "yacl.customdurability.overrides.description": "Add Custom Durabilities for items!\n\n§cHas to be in the format of §8'§7key;durability§8'§c.\n\n§aAccepts Item Tags!",
+
+  "commands.customdurability.armor_multiplier.on": "Armor Durability Multiplier is §aOn.",
+  "commands.customdurability.armor_multiplier.off": "Armor Durability Multiplier is §cOff.",
+  "commands.customdurability.armor_multiplier.set.on": "§aEnabled§r Armor Durability Multiplier.",
+  "commands.customdurability.armor_multiplier.set.off": "§cDisabled§r Armor Durability Multiplier.",
+
+  "commands.customdurability.clear": "§cCleared Durability Overrides.",
+  "commands.customdurability.list": "§aDurabilities:",
+  "commands.customdurability.list.none": "§aDurabilities: §7None",
+  "commands.customdurability.set": "§7Set Durability of '%s§7' to %d.",
+  "commands.customdurability.set.remove": "§7Removed Durability Override of '%s§7'."
 }
