added a functional context for commands, can now use wildcards for items

--- a/src/main/resources/assets/customdurability/lang/en_us.json
+++ b/src/main/resources/assets/customdurability/lang/en_us.json
@@ -13,9 +13,22 @@
   "commands.customdurability.armor_multiplier.set.off": "§cDisabled§r Armor Durability Multiplier.",
 
   "commands.customdurability.clear.not_found": "§cNo Such Durability Override.",
-  "commands.customdurability.clear": "§cCleared Durability Overrides.",
+  "commands.customdurability.clear.all": "§cCleared Durability Overrides.",
   "commands.customdurability.clear.remove": "§7Removed Durability Override of '%s§7'.",
   "commands.customdurability.list": "§aDurabilities:",
   "commands.customdurability.list.none": "§aDurabilities: §7None",
-  "commands.customdurability.set": "§7Set Durability of '%s§7' to %d."
+  "commands.customdurability.set": "§7Set Durability of '%s§7' to %d.",
+
+  "commands.customdurability.temp.no_context": "§cThere is no current context!",
+  "commands.customdurability.temp.clear.all": "§cCleared the current context!",
+  "commands.customdurability.temp.clear.remove": "§7Removed '%s§7' from the context list!",
+  "commands.customdurability.temp.list": "§aContext List:",
+  "commands.customdurability.temp.list.none": "§aDurabilities: §7Current context list is empty...",
+  "commands.customdurability.temp.set": "§7Added '§f%s§7' with durability '§f%d§7' to current context.",
+
+  "commands.customdurability.messages.add_all": "Add all?",
+  "commands.customdurability.messages.confirm": "Confirm",
+  "commands.customdurability.messages.cancel": "§cCancel",
+  "commands.customdurability.messages.remove": "§cRemove",
+  "commands.customdurability.messages.edit": "Edit"
 }
